add header seciton

--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FLEX VIDEO</title>
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-		<script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<link rel="stylesheet" href="css/styles.css" />
 		<script defer src="main.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<header>
+				<h1>
+					<i class="fab fa-firstdraft"> </i>
+					<span>HOONNOTES</span>
+				</h1>
+				<p>2022 HOONNOOTES &copy; ALL RIGHTS RESERVED</p>
+			</header>
+			<section></section>
+			<nav></nav>
+		</main>
+	</body>
 </html>
