--- a/index.html
+++ b/index.html
@@ -24,8 +24,76 @@
 				</h1>
 				<p>2022 HOONNOOTES &copy; ALL RIGHTS RESERVED</p>
 			</header>
-			<section></section>
-			<nav></nav>
+			<section>
+				<article>
+					<div class="inner">
+						<div class="text">
+							<h2>01</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod enim, harum
+								natus laboriosam voluptate!
+							</p>
+						</div>
+						<figure>
+							<video src="vids/vid1.mp4" loop muted></video>
+						</figure>
+					</div>
+				</article>
+				<article>
+					<div class="inner">
+						<div class="text">
+							<h2>02</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod enim, harum
+								natus laboriosam voluptate!
+							</p>
+						</div>
+						<figure>
+							<video src="vids/vid2.mp4" loop muted></video>
+						</figure>
+					</div>
+				</article>
+				<article>
+					<div class="inner">
+						<div class="text">
+							<h2>03</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod enim, harum
+								natus laboriosam voluptate!
+							</p>
+						</div>
+						<figure>
+							<video src="vids/vid3.mp4" loop muted></video>
+						</figure>
+					</div>
+				</article>
+				<article>
+					<div class="inner">
+						<div class="text">
+							<h2>04</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod enim, harum
+								natus laboriosam voluptate!
+							</p>
+						</div>
+						<figure>
+							<video src="vids/vid4.mp4" loop muted></video>
+						</figure>
+					</div>
+				</article>
+			</section>
+			<nav>
+				<ul>
+					<li>
+						<a href="#">
+							<i class="fas fa-envelope"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#"><i class="fas fa-search"></i></a>
+					</li>
+				</ul>
+			</nav>
 		</main>
 	</body>
 </html>
