add on click feature

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
 					</li>
 				</ul>
 			</nav>
+			<aside>
+				<div class="text-box">
+					<h2>01</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab accusantium laborum omnis, a
+						architecto earum?
+					</p>
+				</div>
+				<div class="video-box">
+					<video src="vids/vid1.mp4" loop muted autoplay></video>
+				</div>
+				<span class="btn-close">CLOSE</span>
+			</aside>
 		</main>
 	</body>
 </html>
